Correct paths under project

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -33,7 +33,7 @@
 										<div class="row">
 											<div class="6u 12u$(small)">
 												<video class="image main" controls>
-													<source src="assets/videos/piano.mp4" type="video/mp4" />
+													<source src="../assets/videos/piano.mp4" type="video/mp4" />
 													Your browser does not support video on this website.
 												</video>
 												<h3>Self-playing piano</h3>
@@ -44,14 +44,14 @@
 
 												<br />
 
-												<div class="image main"><img src="assets/images/radio.jpg" alt="" /></div>
+												<div class="image main"><img src="../assets/images/radio.jpg" alt="" /></div>
 												<h3>Radio Bella</h3>
 												<p>During the setup of Radio Bella several problems arose in regards to scheduling the broadcasts and delivering the signal to the antenna responsible for transmitting on the FM-band. Radera provided Radio Bella with an optimal setup that allowed them to easily schedule programs and at the same time not worry about ekstra equipment for failsafe power and internet. Still, the radio enjoyed the benefits of a redundant solution.</p>
 
 												<p>The word spread and shortly after Radera helped Radio Råd og Kultur enjoy the same benefits from our solution.</p>
 											</div>
 											<div class="6u$ 12u$(small)">
-												<a class="image main"><img src="assets/images/lights.jpg" alt="" /></a>
+												<a class="image main"><img src="../assets/images/lights.jpg" alt="" /></a>
 												<h3>Christmas lights</h3>
 												<p>The christmas lights project was set in an old machine hall which was venue for a yearly employee party. The wish was an interesting art installation for which they hired an art company that sub-contracted Radera for the technical setup. Radera got on board only days before the party which made for an interesting challenge. Especially because the tubes were wireless and battery powered without the possibility for recharge.
 
@@ -94,12 +94,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/skel.min.js"></script>
+			<script src="../assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
