Add Atrium video

--- a/projects/index.html
+++ b/projects/index.html
@@ -51,9 +51,12 @@
 												<p>The word spread and shortly after Radera helped Radio Råd og Kultur enjoy the same benefits from our solution.</p>
 											</div>
 											<div class="6u$ 12u$(small)">
-												<a class="image main"><img src="../assets/images/lights.jpg" alt="" /></a>
-												<h3>Christmas lights</h3>
-												<p>The christmas lights project was set in an old machine hall which was venue for a yearly employee party. The wish was an interesting art installation for which they hired an art company that sub-contracted Radera for the technical setup. Radera got on board only days before the party which made for an interesting challenge. Especially because the tubes were wireless and battery powered without the possibility for recharge.
+												<video class="image main" controls>
+													<source src="../assets/videos/atrium.mp4" type="video/mp4" />
+													Your browser does not support video on this website.
+												</video>
+												<h3>Atrium</h3>
+												<p>The Atrium project was set in an old machine hall which was venue for a yearly employee party. The wish was an interesting art installation for which they hired an art company that sub-contracted Radera for the technical setup. Radera got on board only days before the party which made for an interesting challenge. Especially because the tubes were wireless and battery powered without the possibility for recharge.
 
 												<h3>Exactly the kind of challenge we like</h3>
 												<p>The second day into the three-day project, the art company responsible for the light tubes received the wrong transmitters. Despite of this, Radera managed to alter the project slightly to achieve a setup indistinguishable from the original design to great joy for the customer.</p>
